prototype mostly working except range not showing

--- a/src/components/range-slider.css
+++ b/src/components/range-slider.css
@@ -1,6 +1,6 @@
 body {
     font-family: Helvetica, sans-serif;
-    background: ■#26282c;
+    background: #26282c;
     display: flex;
     justify-content: center;
     align-items: center;
